[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arcaflow_plugin_kill_pod"
# Do not change, the version is automatically updated in CI.
version = "0.0.0"
authors = [
]
description = "Chaos Engineering Kill Pod Plugin for Arcaflow"
readme = "README.md"
license = { text="Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  'arcaflow-plugin-sdk >= 0.8.0',
  'kubernetes',
]

[project.urls]
"Homepage" = "https://github.com/arcalotarcaflow-plugin-kill-pod"
"Bug Tracker" = "https://github.com/arcalot/arcaflow-plugin-kill-pod/issues"
